--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
 
 [compat]
+Aqua = "0.8"
 CUDA = "5"
 ComponentArrays = "0.15"
 DataFrames = "1.6"
@@ -34,10 +35,12 @@ Statistics = "1"
 Tullio = "0.3.7"
 Zygote = "0.6"
 cuDNN = "1.3"
+Test = "1"
 julia = "1.10"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Aqua", "Test"]
