Adjusted format action

--- a/.github/workflows/Formatter.yml
+++ b/.github/workflows/Formatter.yml
@@ -22,3 +22,15 @@ jobs:
 
       - name: Install JuliaFormatter and format
         run: julia  -e 'using Pkg; Pkg.add(PackageSpec(name="JuliaFormatter")); using JuliaFormatter; format(".", verbose=true)'
+      
+      - name: Format check
+        run: |
+          julia -e '
+          out = Cmd(`git diff`) |> read |> String
+          if out == ""
+              exit(0)
+          else
+              @error "Some files are not formatted! Please use the SciMLStyle to format your files!"
+              write(stdout, out)
+              exit(1)
+          end'
